@@ -11,6 +11,7 @@ From v1.0.0 and on, the project will adherence strictly to Semantic Versioning.
 
 ### Added
 - Low-memory `SPLoRALinear` forward.
+- Structured Pruning Parallel Residual Adapter (SPPaRA)
 
 
 ## [0.6.2] - 2023-06-16
